# rShot

./: Cargo.toml  README.md  requirments.txt
src/: main.rs  region.rs  region_selector.rs  winmac_region.rs  xcap.rs
