[package]
name = "myshot"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
chrono = "0.4.43"
clap = { version = "4.5.57", features = ["derive"] }
derive = "1.0.0"
dirs = "6.0.0"
eframe = "0.33.3"
fs_extra = "1.3.0"
image = "0.25.9"
rdev = "0.5.3"
tray-icon = "0.21.3"
winapi = { version = "0.3.9", features = ["winuser"] }
winit = "0.30.12"
xcap = "0.8.1"
